# FA-RSS

./: Dockerfile-fetcher  Dockerfile-server  README.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml  utils.py
fa_rss/: app.py  data_fetcher.py  faexport_client.py  feed_item.py  models.py  settings.py
fa_rss/database/: database.py  models.py
fa_rss/database/migrations/: 01_init_db.sql
fa_rss/faexport/: client.py  errors.py  models.py  slowdown.py
templates/: browse_feed.rss.jinja2  feed_base.rss.jinja2  feed_submission.rss.jinja2  feed_submission_description.html.jinja2  feed_submission_preview.rss.jinja2  feed_submission_preview_description.html.jinja2  gallery_feed.rss.jinja2  gallery_feed_preview.rss.jinja2  home.html.jinja2
