[tool.poetry]
name = "fa-rss"
version = "0.1.0"
description = "An RSS feed provider for Furaffinity"
authors = ["Deer-Spangle <deer@spangle.org.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^3.0.2"}
aiohttp = "^3.9.3"
python-dateutil = "^2.8.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
